@@ -103,8 +103,6 @@ static void   script_fu_brush_callback      (gpointer              data,
                                              const guchar         *mask_data,
                                              gboolean              closing);
 
-static gchar * script_fu_strescape          (const gchar          *source);
-
 
 /*
  *  Local variables
@@ -1011,68 +1009,4 @@ script_fu_reset (SFScript *script)
           break;
         }
     }
-}
-
-
-/*
- * Escapes the special characters '\b', '\f', '\n', '\r', '\t', '\' and '"'
- * in the string source by inserting a '\' before them.
- */
-static gchar *
-script_fu_strescape (const gchar *source)
-{
-  const guchar *p;
-  gchar        *dest;
-  gchar        *q;
-
-  g_return_val_if_fail (source != NULL, NULL);
-
-  p = (const guchar *) source;
-
-  /* Each source byte needs maximally two destination chars */
-  q = dest = g_malloc (strlen (source) * 2 + 1);
-
-  while (*p)
-    {
-      switch (*p)
-        {
-        case '\b':
-          *q++ = '\\';
-          *q++ = 'b';
-          break;
-        case '\f':
-          *q++ = '\\';
-          *q++ = 'f';
-          break;
-        case '\n':
-          *q++ = '\\';
-          *q++ = 'n';
-          break;
-        case '\r':
-          *q++ = '\\';
-          *q++ = 'r';
-          break;
-        case '\t':
-          *q++ = '\\';
-          *q++ = 't';
-          break;
-        case '\\':
-          *q++ = '\\';
-          *q++ = '\\';
-          break;
-        case '"':
-          *q++ = '\\';
-          *q++ = '"';
-          break;
-        default:
-          *q++ = *p;
-          break;
-        }
-
-      p++;
-    }
-
-  *q = 0;
-
-  return dest;
 }
