@@ -19,10 +19,13 @@
 #ifndef __SCRIPT_FU_SCRIPTS_H__
 #define __SCRIPT_FU_SCRIPTS_H__
 
-void     script_fu_find_scripts  (const gchar *path);
-pointer  script_fu_add_script    (scheme *sc, pointer a);
-pointer  script_fu_add_menu      (scheme *sc, pointer a);
-void     script_fu_error_msg     (const gchar *command,
-                                  const gchar *msg);
+
+void       script_fu_find_scripts  (const gchar *path);
+pointer    script_fu_add_script    (scheme *sc, pointer a);
+pointer    script_fu_add_menu      (scheme *sc, pointer a);
+void       script_fu_error_msg     (const gchar *command,
+                                    const gchar *msg);
+gchar   * script_fu_strescape      (const gchar *source);
+
 
 #endif /*  __SCRIPT_FU_SCRIPTS__  */
